--- a/app/views/pages/_search_projects.html.erb
+++ b/app/views/pages/_search_projects.html.erb
@@ -9,7 +9,7 @@
       <i class="far fa-search"></i>
     <%end%>
     <div class="filters">
-      <%=inline_svg_tag 'filter.svg'%>
+      <%=inline_svg_tag 'filter.svg',class: 'svg__search-filters'%>
     </div>
     <%= link_to  request.path, class: "reset__btn" do%>
       <i class="fal fa-times"></i>
