--- a/app/views/profiles/_user_profile.html.erb
+++ b/app/views/profiles/_user_profile.html.erb
@@ -1,5 +1,9 @@
 <div class="user__picture-<%=user.role%>">
-  <%=inline_svg_tag 'default_avatar.svg'%>
+  <% if user.profile_image.attached? %>
+    <%=image_tag user.profile_image%>
+  <% else %>
+    <%=inline_svg_tag 'default_avatar.svg'%>
+  <% end %>
 </div>
 <%if user_freelancer?(current_user) && authenticate_profile(user) && request.path == freelancer_path(current_user)%>
   <%=link_to 'Edit Profile',edit_bidding_profile_path(current_user.bidding_profile),class:'edit__profile' if bidding_profile_exist? %>
