--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,12 +29,11 @@ body {
   header {
     position: absolute;
     top: 0;
-    padding-top: 0.1rem;
-
+    padding-top: 0.5rem;
     .logo {
       display: block;
       width: 100px;
-      height: 60px;
+      height: 50px;
     }
   }
   .search__bar {
@@ -185,17 +184,21 @@ body {
       .user__avatar {
         position: relative;
         margin-left: auto;
-        & img {
+        & img,
+        & svg {
           height: 50px;
           width: 50px;
           display: block;
-          opacity: 0.8;
-          border-radius: 50%;
           cursor: pointer;
           &:hover {
             opacity: 1;
-            border: 2px solid rgb(136, 132, 132);
+            border: 2px solid rgb(165, 165, 165);
+            border-radius: 50%;
           }
+        }
+        & img {
+          border: 1px solid rgb(143, 143, 143);
+          border-radius: 50%;
         }
       }
     }
@@ -285,7 +288,7 @@ body {
     .footer__logo {
       display: block;
       width: 100px;
-      height: auto;
+      height: 60px;
     }
     .footer__copyright {
       font-size: 1rem;
@@ -295,10 +298,11 @@ body {
 }
 @media (max-width: 1200px) {
   body {
-    header .logo {
-      padding-top: 0.2rem;
-      width: auto;
-      height: 55px;
+    header {
+      padding-top: 0.3rem;
+      .logo {
+        height: 50px;
+      }
     }
     nav {
       margin-top: 60px;
