--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -31,10 +31,15 @@ $font: "Comfortaa", cursive;
 
     .user__image {
       flex-basis: 35px;
-      svg {
+      svg,
+      img {
         height: 30px;
         width: 30px;
         flex-basis: 35px;
+      }
+      img {
+        border: 1px solid rgb(143, 143, 143);
+        border-radius: 50%;
       }
     }
 
