--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -330,10 +330,15 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
         .user_image {
           padding: 1rem;
           align-self: flex-start;
-          svg {
+          svg,
+          img {
             display: block;
             height: 60px;
             width: 60px;
+          }
+          img {
+            border: 1px solid rgb(143, 143, 143);
+            border-radius: 50%;
           }
         }
         & > ul {
@@ -342,7 +347,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
           padding: 0.6rem 0.5rem 0;
           gap: 0.5rem;
           .freelancer__name {
-            font-size: 1.4rem;
+            font-size: 1rem;
             color: #474747;
             text-transform: capitalize;
             font-weight: 600;
@@ -352,11 +357,14 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
               font-size: 0.8rem;
               color: #696969;
             }
+            &:hover {
+              text-decoration: underline;
+            }
           }
           .freelancer__bio {
             flex-basis: 25px;
             font-family: $font-montserrat;
-            font-size: 0.9rem;
+            font-size: 0.75rem;
             word-spacing: 2px;
             font-weight: 500;
             line-height: 16px;
