--- a/app/assets/stylesheets/profile/_user-profile.scss
+++ b/app/assets/stylesheets/profile/_user-profile.scss
@@ -48,9 +48,13 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   right: 50%;
   transform: translate(50%, -50%);
 
-  svg {
+  svg,
+  img {
     height: 100px;
     width: 100px;
+  }
+  img {
+    border: 1px solid rgb(143, 143, 143);
     border-radius: 50%;
   }
   &::after {
