--- a/app/assets/stylesheets/project/bids.scss
+++ b/app/assets/stylesheets/project/bids.scss
@@ -79,9 +79,14 @@
         }
         .client__picture {
           flex: 1;
-          img {
+          img,
+          svg {
             width: 40px;
             height: 40px;
+          }
+          img {
+            border: 1px solid rgb(143, 143, 143);
+            border-radius: 50%;
           }
         }
       }
