--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header> <%=link_to root_path do%>
-        <%=image_tag "logo.png",class:'logo' %>
+    <header>
+      <%=link_to root_path do%>
+        <%=inline_svg_tag "logo.svg",class:'logo' %>
       <%end%>
     </header>
     <div class="search__bar">
@@ -62,7 +63,11 @@
             </li>
             <li class="user__avatar">
               <%=link_to dropdown_profile_path,remote: true do%>
-                <%=image_tag user_image(current_user.id)%>
+                <% if current_user.profile_image.attached? %>
+                  <%=image_tag current_user.profile_image%>
+                <% else %>
+                  <%=inline_svg_tag 'default_avatar.svg'%>
+                <% end %>
               <% end %>
             </li>
           <%end%>
@@ -109,7 +114,7 @@
           <%=link_to 'Contact us',root_path,class:'footer__link'%>
         </li>
       </ul>
-      <%=image_tag 'logo.png',class:"footer__logo" %>
+      <%=inline_svg_tag 'logo.svg',class:"footer__logo" %>
       <p class="footer__copyright">
         Copyright &copy; 2021 BidMaster .All right reserved. 
       </p>
