--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,6 +1,6 @@
 <div class=" hero">
   <section class="banner">
-    <h1> Find quality freelancers and agencies for mobile development </h1>
+    <h1> Find the perfect freelance services for your business </h1>
     <p>Hire proven pros with confidence using the world’s largest, remote talent platform.</p>
     <%=link_to 'SignUp', new_user_registration_path,class:'btn-primary'%>
   </section>
