refactored search functionality

--- a/app/views/pages/_searchFieldFreelancer.html.erb
+++ b/app/views/pages/_searchFieldFreelancer.html.erb
@@ -1,2 +1,2 @@
-<%= f.label  :name_cont ,style:'display:none' %>
-<%= f.search_field :name_cont , placeholder: "search freelancers", class: "form-control" %>
+<%= f.label  :name_or_email_or_bidding_profile_category_or_bidding_profile_experience_cont ,style:'display:none' %>
+<%= f.search_field :name_or_email_or_bidding_profile_category_or_bidding_profile_experience_cont , placeholder: "search freelancers", class: "form-control" %>
