--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Complete your account setup" %>
 <section class= "sign__up-page" >
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <section class= "sign__up-form">
