--- a/app/views/projects/bids/history.html.erb
+++ b/app/views/projects/bids/history.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Bid History" %>
 <main class="bid__history">
   <div class="bid-history__heading">
     <h3>bid history</h3>
