--- a/app/views/bidding_profiles/_form.html.erb
+++ b/app/views/bidding_profiles/_form.html.erb
@@ -1,6 +1,12 @@
 <main class="freelancers__form-page">
   <div class="freelancer__form-details">
-    <h3>Complete your registration</h3>
+    <h3>
+      <% if request.path  == new_bidding_profile_path %>
+        Complete your registration
+      <% else %>
+        Edit your bidding profile
+      <% end %>
+    </h3>
   </div>
   <%=form_for freelancer_info do|f|%>
     <%=render partial: "education",locals: {f: f,freelancer_info: freelancer_info } %>
