--- a/app/views/dropdowns/_dropdown.html.erb
+++ b/app/views/dropdowns/_dropdown.html.erb
@@ -13,10 +13,10 @@
   </li>
   <li>
     <%=inline_svg_tag 'settings.svg',class:'user__setting' %>
-    <%=link_to 'Settings',  edit_user_registration_path ,class:'setting__field'%>
+    <%=link_to 'Settings',  edit_user_path ,class:'setting__field'%>
   </li>
   <li>
     <i class="fal fa-sign-out-alt"></i>
-    <%=link_to 'Logout', destroy_user_session_path, class:'logout__field' ,method: :delete %>
+    <%=link_to 'Logout', logout_path, class:'logout__field' ,method: :delete %>
   </li>
 </ul>
