--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,10 +80,10 @@
           <%end%>
         <%else%>
           <li>
-            <% if request.path == new_user_session_path %>
-              <%=link_to 'sign up',new_user_registration_path,class:'btn-primary'%>
+            <% if request.path == login_path %>
+              <%=link_to 'sign up',signup_path,class:'btn-primary'%>
             <% else %>
-              <%=link_to 'Login',new_user_session_path,class:'btn-primary'%>
+              <%=link_to 'Login',login_path,class:'btn-primary'%>
             <% end %>
           </li>
         <%end%>
