--- a/app/views/projects/_job__post-modal.html.erb
+++ b/app/views/projects/_job__post-modal.html.erb
@@ -45,7 +45,7 @@
       </li>
       <% unless current_user %>
         <li class="login__btn-to-continue">
-          <%=link_to 'Login to Bid' ,new_user_session_path%>
+          <%=link_to 'Login to Bid' ,login_path%>
         </li>
       <% end %>
     </ul>
