--- a/app/views/projects/details/_rejected.html.erb
+++ b/app/views/projects/details/_rejected.html.erb
@@ -30,7 +30,7 @@
           </li>
         </ul>
         <div class="bid__status">
-          <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
+          <span class="stamp is-<%=bid.status%>"><%=bid.status%></span>
         </div>
       </li >
     <%end%>
