--- a/app/views/projects/bids/_my-bids.html.erb
+++ b/app/views/projects/bids/_my-bids.html.erb
@@ -13,7 +13,7 @@
           <% else %>
             <i class="fal fa-crown"></i>
           <% end %>
-          <span>Bid <%=bid.aasm_state%></span>
+          <span>Bid <%=bid.status%></span>
         </div>
       </li>
       <li class="bid__created-at">
