--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,6 +144,10 @@ body {
           font-weight: 600;
           font-size: 14px;
           width: 100px;
+          transition: background 0.5s;
+          &:hover {
+            background: #1178c2;
+          }
         }
         a {
           text-decoration: none;
