--- a/app/views/admin/bidding_profiles/index.html.erb
+++ b/app/views/admin/bidding_profiles/index.html.erb
@@ -1,7 +1,8 @@
+<% content_for :title, "Bidding Profiles" %>
 <%=render 'admin/dashboards/sidebar'%>
 <div class="main-content">
   <main class="users">
-    <h2 class="dash-title"><i class="fad fa-users"></i> Bidding Profiles</h2>
+    <h2 class="dash-title"> <i class="fad fa-id-card"></i> Bidding Profiles</h2>
     <section class="recent">
       <div class="activity-card">
         <%=link_to 'New Bidding Profile',new_admin_bidding_profile_path,class:'btn-primary'%>
@@ -25,6 +26,17 @@
                   <td><%=bidding_profile.category%></td>
                   <td><%=bidding_profile.subcategory%></td>
                   <td><%=bidding_profile.experience%></td>
+                  <td class="action__buttons">
+                    <%=link_to admin_bidding_profile_path(bidding_profile) do%>
+                      <i class="fal fa-eye"></i>
+                    <% end %>
+                    <%=link_to edit_admin_bidding_profile_path(bidding_profile) do%>
+                      <i class="fal fa-edit"></i>
+                    <% end %>
+                    <%=link_to admin_bidding_profile_path(bidding_profile),method: :delete,data: {confirm: 'Are you sure?'} do%>
+                      <i class="fal fa-trash-alt"></i>
+                    <% end %>
+                  </td>
                 </tr>
               <% end %>
             </tbody>
