--- a/app/assets/stylesheets/dashboards.scss
+++ b/app/assets/stylesheets/dashboards.scss
@@ -25,9 +25,43 @@ $main-color: #027581;
   align-items: center;
   height: 60px;
   padding: 0rem 1rem;
+  justify-content: space-between;
   svg {
     width: 30px;
     height: 30px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+.admin__details {
+  margin: 0.7rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  i {
+    font-size: 2.3rem;
+    position: relative;
+    margin-bottom: 1.5rem;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 75px;
+      height: 75px;
+      border: 2px solid rgb(61, 144, 13);
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+    }
+  }
+  span {
+    font-size: 0.7rem;
   }
 }
 
@@ -39,7 +73,7 @@ $main-color: #027581;
     margin-bottom: 0.5rem;
     a {
       color: #fff;
-      font-size: 1rem;
+      font-size: 0.9rem;
       text-decoration: none;
       display: block;
       width: 100%;
@@ -120,20 +154,40 @@ $main-color: #027581;
           font-size: 0.9rem;
           padding: 1rem 1rem;
           color: #1d2231;
+          text-align: center;
         }
 
         td {
           font-size: 0.8rem;
+          a {
+            font-size: 0.9rem;
+            text-decoration: none;
+            color: blue;
+            &:hover {
+              text-decoration: underline;
+            }
+          }
         }
         .action__buttons {
           display: flex;
           gap: 1.5rem;
-          font-size: 1.2rem;
+          font-size: 1.1rem;
+          justify-content: center;
           i:hover {
             color: green;
             cursor: pointer;
           }
         }
+
+        .fa-check-circle {
+          color: green;
+          font-size: 1rem;
+        }
+        .fa-times-circle {
+          color: red;
+          font-size: 1rem;
+        }
+
         thead {
           background: #efefef;
           text-align: left;
@@ -151,7 +205,7 @@ $main-color: #027581;
         color: white;
         line-height: 1.5rem;
         border-radius: 5px;
-        font-weight: 600;
+        font-weight: 500;
         font-size: 14px;
         max-width: 180px;
         margin: 1rem;
