--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -119,7 +119,8 @@ $font-quicksand: "Quicksand", serif;
       }
     }
     .project__category,
-    .freelancer__category {
+    .freelancer__category,
+    .all__clients {
       display: flex;
       gap: 1rem;
       div {
@@ -492,7 +493,9 @@ $font-quicksand: "Quicksand", serif;
     border-top-right-radius: 0.5rem;
     border-top-left-radius: 0.5rem;
     background: white;
-
+    h2 {
+      border: none;
+    }
     .job__post-title {
       min-height: 4rem;
       position: relative;
@@ -594,6 +597,7 @@ $font-quicksand: "Quicksand", serif;
     }
     .place__bid {
       border-top: 1px solid #d6d2d2;
+
       & > form {
         display: flex;
         align-items: center;
@@ -649,6 +653,34 @@ $font-quicksand: "Quicksand", serif;
               cursor: pointer;
             }
           }
+        }
+      }
+      .bid__by-freelancer {
+        display: flex;
+        justify-content: space-around;
+        gap: 1rem;
+        width: 100%;
+        .select__project,
+        .select__freelancer {
+          flex: 1 1 50%;
+          .errors {
+            padding-left: 0;
+          }
+        }
+        label {
+          display: block;
+          position: relative;
+
+          &::after {
+            content: "*";
+            position: absolute;
+            color: #da0000;
+            top: 0;
+            left: -10px;
+          }
+        }
+        select {
+          width: 100%;
         }
       }
     }
