--- a/app/views/admin/dashboards/_sidebar.html.erb
+++ b/app/views/admin/dashboards/_sidebar.html.erb
@@ -1,33 +1,40 @@
 <div class="sidebar">
   <div class="sidebar-header">
     <%=inline_svg_tag 'logo.svg'%>
-    <h3 class="brand">
-      <span>BidMaster</span>
-    </h3>
+    <%=link_to root_path do%>
+      <h3 class="brand">
+        <span>Dashboard</span>
+      </h3>
+    <% end %>
+  </div>
+  <div class="admin__details">
+    <i class="fal fa-user-cog"></i>
+    <span><%=current_user.name%></span>
+    <span><%=current_user.email%></span>
   </div>
   <div class="sidebar-menu">
     <ul>
       <li class="<%=request.path==admin_users_path ? "add__background": "" %>">
         <%=link_to admin_users_path do%>
-          <span class="ti-home"></span>
+          <i class="fad fa-users"></i>
           <span>Users</span>
         <% end %>
       </li>
       <li class="<%=request.path==admin_projects_path ? "add__background": "" %>">
         <%=link_to admin_projects_path do%>
-          <span class="ti-home"></span>
+          <i class="fal fa-desktop"></i>
           <span>Projects</span>
         <% end %>
       </li>
       <li class="<%=request.path==admin_bids_path ? "add__background": "" %>">
         <%=link_to admin_bids_path do%>
-          <span class="ti-home"></span>
+          <i class="fal fa-gavel"></i>
           <span>Bids</span>
         <% end %>
       </li>
       <li class="<%=request.path==admin_bidding_profiles_path ? "add__background": "" %>">
         <%=link_to admin_bidding_profiles_path do%>
-          <span class="ti-home"></span>
+          <i class="fad fa-id-card"></i>
           <span>Bidding Profile</span>
         <% end %>
       </li>
