--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,4 @@
+ <% content_for :title, "Users" %>
 <%=render 'admin/dashboards/sidebar'%>
 <div class="main-content">
   <main class="users">
@@ -24,14 +25,34 @@
                   <td><%=user.id  %></td>
                   <td><%=user.name %></td>
                   <td><%=user.email%></td>
-                  <td><%=user.admin%></td>
-                  <td><%=user.role %></td>
-                  <td><%=user.approved%></td>
-                  <td class="action__buttons">
-                    <i class="fal fa-eye"></i>
-                    <i class="fal fa-edit"></i>
-                    <i class="fal fa-trash-alt"></i>
+                  <td >
+                    <% if user.admin%>
+                      <i class="fas fa-check-circle"></i>
+                    <% else %>
+                      <i class="fas fa-times-circle"></i>
+                    <% end %>
                   </td>
+                  <td><%=user.role %></td>
+                  <td >
+                    <% if user.approved%>
+                      <i class="fas fa-check-circle"></i>
+                    <% else %>
+                      <i class="fas fa-times-circle"></i>
+                    <% end %>
+                  </td>
+                  <% unless user.admin? && user == current_user  %>
+                    <td class="action__buttons">
+                      <%=link_to admin_user_path(user) do%>
+                        <i class="fal fa-eye"></i>
+                      <% end %>
+                      <%=link_to edit_admin_user_path(user) do%>
+                        <i class="fal fa-edit"></i>
+                      <% end %>
+                      <%=link_to admin_user_path(user),method: :delete,data: {confirm: 'Are you sure?'} do%>
+                        <i class="fal fa-trash-alt"></i>
+                      <% end %>
+                    </td>
+                  <% end %>
                 </tr>
               <% end %>
             </tbody>
