--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -41,6 +41,10 @@
               <% end %>
             </tbody>
           </table>
+          <div class="pagination__buttons">
+            <%= link_to_previous_page @projects, 'Previous ',class:'prv__btn' %>
+            <%= link_to_next_page @projects, 'Next ',class:'nxt__btn' %>
+          </div>
         </div>
       </div>
     </section>
