--- a/app/views/projects/_job__post-modal.html.erb
+++ b/app/views/projects/_job__post-modal.html.erb
@@ -50,7 +50,7 @@
       <% end %>
     </ul>
   </div>
-  <%if user_freelancer?(current_user) ||( current_user.admin? && request.path==admin_bid_path) %>
+  <%if user_freelancer?(current_user) ||( current_user.try(:admin?) && request.path==admin_bid_path) %>
     <section class="place__bid bid-<%=@bid.awarded? ? "awarded-disable" : ""%>">
       <%=form_for [project,bid],remote: true do|f|%>
         <div class="bid__proposal-field">
