--- a/app/views/profiles/_details.html.erb
+++ b/app/views/profiles/_details.html.erb
@@ -4,6 +4,10 @@
       <i class="fas fa-calendar-check"></i>
       joined <%=distance_of_time_in_words_to_now(user.created_at)%> ago
     </div>
+    <div class="user__statistics">
+      <span>  Proposals accepted: <%=total_proposals_accepted(user) + total_projects_awarded(user)%></span>
+      <span>  Proposals rejected: <%=total_proposals_rejected(user)%></span>
+    </div>
   <% else %>
     <div class="user__statistics">
       <span> Total Bids: <%= total_bids_by_user?(user)%></span>
