--- a/app/views/profiles/_about-me.html.erb
+++ b/app/views/profiles/_about-me.html.erb
@@ -6,15 +6,15 @@
   <div class="user___details">
     <p>
       <span>Education:</span>
-      <%= user.bidding_profile.try(:education) ? user.bidding_profile.try(:education)   : "none" %> </p>
+      <%= user.bidding_profile&.education ? user.bidding_profile&.education   : "none" %> </p>
     <p>
       <span>Skill level: </span>
-      <%= user.bidding_profile.try(:experience) ? user.bidding_profile.try(:experience) : "none" %> </p>
+      <%= user.bidding_profile&.experience ? user.bidding_profile&.experience : "none" %> </p>
     <p>
       <span>  Category:</span>
-      <%= user.bidding_profile.try(:category) ? user.bidding_profile.try(:category) : "none" %>  , <%= user.bidding_profile.try(:subcategory) %> </p>
+      <%= user.bidding_profile&.category ? user.bidding_profile&.category : "none" %>  , <%= user.bidding_profile&.subcategory %> </p>
     <p>
       <span> Bio:</span>
-      <%= user.bidding_profile.try(:bio)? user.bidding_profile.try(:bio) : "none" %> </p>
+      <%= user.bidding_profile&.bio ? user.bidding_profile&.bio  : "none" %> </p>
   </div>
 </li>
