--- a/app/views/pages/_search-results-freelancers.html.erb
+++ b/app/views/pages/_search-results-freelancers.html.erb
@@ -1,6 +1,6 @@
 <div class="search__results-freelancers">
   <ul class="freelancers">
-    <%freelancers.try(:each) do|freelancer| %>
+    <%freelancers&.each do|freelancer| %>
       <li class="freelancer">
         <div class="user_image">
           <% if freelancer.profile_image.attached? %>
@@ -13,11 +13,11 @@
           <li class="freelancer__name">
             <%= freelancer.name %>
             <div class="category">
-              <%= freelancer.bidding_profile.try(:category) %>
+              <%= freelancer.bidding_profile&.category %>
             </div>
           </li >
           <li  class="freelancer__bio">
-            <%if freelancer.bidding_profile.try(:bio) %>
+            <%if freelancer.bidding_profile&.bio %>
               <% if freelancer.bidding_profile.bio.length > 300 %>
                 <%= freelancer.bidding_profile.bio.from(0).to(300) %>......
               <% else %>
